--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "jazzcash-checkout": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.4",
